--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -11,7 +11,7 @@
   <div class="controlsContainer">
       <div class="list_title">
         <div class="boxedCheckbox">
-          <input type="checkbox" name="name" id="checkAll">
+          <input #mc (change)="checkAll(mc)" type="checkbox" name="name" id="checkAll">
           <label for="checkAll"></label>
         </div>
         <div class="list_title_text">
@@ -37,19 +37,25 @@
           </div>
           <div class="viewAs">
             <span>View as</span>
-              <span>
-                <input type="radio" name="view" value="1" id="galleryView">
-                <label for="galleryView"><i class="fa fa-th-large" aria-hidden="true"></i></label>
-              </span>
-              <span>
-                <input checked type="radio" name="view" value="1" id="listView">
-                <label for="listView"><i class="fa fa-list" aria-hidden="true"></i></label>
-              </span>
+            <span 
+              [class.active]="view === 'grid'"
+              routerLink="/category/new"
+              [queryParams]="{view: 'grid'}"
+            >
+              <i class="fa fa-th-large" aria-hidden="true"></i>
+            </span>
+            <span 
+              [class.active]="view === 'list'"
+              routerLink="/category/new"
+              [queryParams]="{view: 'list'}"
+            >
+              <i class="fa fa-list" aria-hidden="true"></i>
+            </span>
           </div>
           <div class="zoomRange">
-            <input type="range" id="zoomRangeInput" value="10" min="5" max="20">
+            <input #ri (input)="rangeValueChange(ri)" type="range" id="zoomRangeInput" value="10" min="5" max="20">
             <!-- <span id="zoomRangeValue">10</span> -->
-            <input type="text" name="zoomRangeValue" id="zoomRangeValue" value="10">
+            <input #rv (keyup)="rangeValueChange(rv)" type="text" name="zoomRangeValue" id="zoomRangeValue" value="10">
           </div>
           <div class="dualPanel">
             <span>
@@ -62,7 +68,7 @@
             </span>
           </div>
           <div class="mainCart">
-            <p><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p>
+            <p (click)="mainAddtoCart()"><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p>
           </div>
           <img id="toolBox" src="assets/images/brqx_2017_toolbox_128.png" alt="">
 
@@ -71,41 +77,83 @@
   </div>
 
 
-  <div class="product_list">
-    <form action="" method="">
+  <div 
+    class="product_list"
+    [class.listView]="view === 'list'"
+    [class.gridView]="view === 'grid'"
+  >
 
-      <div class="single_product">
+
+      <div class="single_product" *ngFor="let product of products">
           <div class="checkboxWithPimage">
             <div class="boxedCheckbox">
-              <input class="allProductCheckbox" type="checkbox" name="productID-selectBox" id="productID1">
-              <label for="productID1"></label>
+              <input class="allProductCheckbox" type="checkbox" name="productID-{{product.id}}-selectBox" id="productID-{{product.id}}">
+              <label for="productID-{{product.id}}"></label>
             </div>
-            <img src="assets/images/single_product.jpg" alt=""/>
+            <img src="{{product.pImage}}" alt=""/>
           </div>
 
           <div class="productText">
-            <div class="pName responsiveText"><p><a href="">A very very Long product name with extended behaviour</a></p></div>
+            <div class="pName responsiveText"><p><a href="">{{product.name}}</a></p></div>
 
             <div class="pDescription responsiveText">
-              <p>Product Description</p>
+              <p>{{product.pDes}}</p>
             </div>
-            <div class="TextField1 responsiveText"><p>textField_01</p></div>
-            <div class="TextField2 responsiveText"><p>textField_02</p></div>
-            <div class="mainCart"><label for="cartfilled-id01"><p><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p></label></div>
+            <div class="TextField1 responsiveText"><p>{{product.textField1}}</p></div>
+            <div class="TextField2 responsiveText"><p>{{product.textField2}}</p></div>
+            <div class="mainCart">
+              <label for="cartfilled-id-{{product.id}}">
+                <p>
+                  <i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span>
+                </p>
+              </label>
+            </div>
             <div class="pQuantity">
-              <select name="quantity-id" id="quantity-id">
+              <select name="quantity-{{product.id}}" id="quantity-{{product.id}}">
                 <option value="1">01</option>
                 <option value="2">02</option>
                 <option value="5">05</option>
                 <option value="10">10</option>
               </select>
             </div>
-            <div class="pPrice"><p><span>978</span>$</p></div>
+            <div class="pPrice"><p><span>{{product.price}}</span>$</p></div>
           </div> <!-- productText -->
+
+          <div class="gridViewText">
+            <div class="normalView">
+              <p class="pNname">{{product.name}}</p>
+              <p>
+                <span class="pNoldPrice">{{product.oldPrice}}$</span>
+                <span class="pNnewPrice">{{product.price}}$</span>
+              </p>
+            </div>
+            <div class="extendedView">
+              <p class="pEdes"><a href="">{{product.name}}</a></p>
+              <p>
+                <span class="pEoldPrice">{{product.oldPrice}} $</span>
+                <span class="pEnewPrice">{{product.price}} $</span>
+              </p>
+              <div class="pErating">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <span>{{product.rating}}</span>
+              </div>
+              <div class="pEaddToCart">
+                <label for="cartfilled-id-{{product.id}}">
+                  <p>
+                    <i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span>
+                  </p>
+                </label>
+              </div>
+            </div>
+          </div>
 
           <div class="checkedImage">
             <div class="cartfilled">
-              <input type="checkbox" name="cartfilled-id01" id="cartfilled-id01" >
+              <input type="checkbox" name="cartfilled-id-{{product.id}}" id="cartfilled-id-{{product.id}}" >
               <img src="assets/images/brqx_2017_cart_filled_256.png" alt=""/>
             </div>
             
@@ -114,123 +162,10 @@
           </div>
       </div> <!-- Single Product -->
       
-      <div class="single_product">
-          <div class="checkboxWithPimage">
-            <div class="boxedCheckbox">
-              <input class="allProductCheckbox" type="checkbox" name="productID-selectBox" id="productID1">
-              <label for="productID1"></label>
-            </div>
-            <img src="assets/images/single_product.jpg" alt=""/>
-          </div>
-
-          <div class="productText">
-            <div class="pName responsiveText"><p><a href="">A very very Long product name with extended behaviour</a></p></div>
-
-            <div class="pDescription responsiveText">
-              <p>Product Description Product Description</p>
-            </div>
-            <div class="TextField1 responsiveText"><p>textField_01</p></div>
-            <div class="TextField2 responsiveText"><p>textField_02</p></div>
-            <div class="mainCart"><label for="cartfilled-id02"><p><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p></label></div>
-            <div class="pQuantity">
-              <select name="quantity-id" id="quantity-id">
-                <option value="1">01</option>
-                <option value="2">02</option>
-                <option value="5">05</option>
-                <option value="10">10</option>
-              </select>
-            </div>
-            <div class="pPrice"><p><span>978</span>$</p></div>
-          </div> <!-- productText -->
-
-          <div class="checkedImage">
-            <div class="cartfilled">
-              <input type="checkbox" name="cartfilled-id02" id="cartfilled-id02" >
-              <img src="assets/images/brqx_2017_cart_filled_256.png" alt=""/>
-            </div>
-            <i class="fa fa-pencil-square-o editButton" aria-hidden="true"></i>
-          </div>
-      </div> <!-- Single Product -->
       
-      <div class="single_product">
-          <div class="checkboxWithPimage">
-            <div class="boxedCheckbox">
-              <input class="allProductCheckbox" type="checkbox" name="productID-selectBox" id="productID1">
-              <label for="productID1"></label>
-            </div>
-            <img src="assets/images/single_product.jpg" alt=""/>
-          </div>
-
-          <div class="productText">
-            <div class="pName responsiveText"><p><a href="">A very very Long product name with extended behaviour</a></p></div>
-
-            <div class="pDescription responsiveText">
-              <p>Product Description</p>
-            </div>
-            <div class="TextField1 responsiveText"><p>textField_01 textField_01</p></div>
-            <div class="TextField2 responsiveText"><p>textField_02</p></div>
-            <div class="mainCart"><label for="cartfilled-id03"><p><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p></label></div>
-            <div class="pQuantity">
-              <select name="quantity-id" id="quantity-id">
-                <option value="1">01</option>
-                <option value="2">02</option>
-                <option value="5">05</option>
-                <option value="10">10</option>
-              </select>
-            </div>
-            <div class="pPrice"><p><span>978</span>$</p></div>
-          </div> <!-- productText -->
-
-          <div class="checkedImage">
-            <div class="cartfilled">
-              <input checked="true" type="checkbox" name="cartfilled-id03" id="cartfilled-id03" >
-              <img src="assets/images/brqx_2017_cart_filled_256.png" alt=""/>
-            </div>
-            <i class="fa fa-pencil-square-o editButton" aria-hidden="true"></i>
-          </div>
-      </div> <!-- Single Product -->
-      
-      <div class="single_product">
-          <div class="checkboxWithPimage">
-            <div class="boxedCheckbox">
-              <input class="allProductCheckbox" type="checkbox" name="productID-selectBox" id="productID1">
-              <label for="productID1"></label>
-            </div>
-            <img src="assets/images/single_product.jpg" alt=""/>
-          </div>
-
-          <div class="productText">
-            <div class="pName responsiveText"><p><a href="">A very very Long product name with extended behaviour</a></p></div>
-
-            <div class="pDescription responsiveText">
-              <p>Product Description</p>
-            </div>
-            <div class="TextField1 responsiveText"><p>textField_01</p></div>
-            <div class="TextField2 responsiveText"><p>textField_02 textField_02 textField_02</p></div>
-            <div class="mainCart"><label for="cartfilled-id04"><p><i class="fa fa-opencart" aria-hidden="true"></i><span>ADD TO CART</span></p></label></div>
-            <div class="pQuantity">
-              <select name="quantity-id" id="quantity-id">
-                <option value="1">01</option>
-                <option value="2">02</option>
-                <option value="5">05</option>
-                <option value="10">10</option>
-              </select>
-            </div>
-            <div class="pPrice"><p><span>978</span>$</p></div>
-          </div> <!-- productText -->
-
-          <div class="checkedImage">
-            <div class="cartfilled">
-              <input type="checkbox" name="cartfilled-id04" id="cartfilled-id04" >
-              <img src="assets/images/brqx_2017_cart_filled_256.png" alt=""/>
-            </div>
-            <i class="fa fa-pencil-square-o editButton" aria-hidden="true"></i>
-          </div>
-      </div> <!-- Single Product -->
       
       
 
 
-    </form>
   </div>
 </div>
