--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -6,7 +6,7 @@
 	.product_navigation span {
 	    position: relative;
 	    font-size: 1.4em;
-	    margin-right: 20px;
+	    margin-right: 1.2em;
 	}
 
 	.product_navigation {
@@ -607,6 +607,39 @@
 /* Grid End */
 
 /* Responsive Start */
+	/* 4K Responsive */
+	@media (min-width: 2049px){
+		.dualPanel{
+			width: 80px;
+		}
+		.product_list.gridView .single_product {
+			width: 500px;
+			height: 500px;
+			margin: 20px;
+		}
+		.product_list.gridView .gridViewText{
+			bottom: -300px;
+		}
+		.product_list.gridView .gridViewText .extendedView{
+			height: 300px;
+		}
+		.pEaddToCart{
+			height: 60px;
+		}
+		.boxedCheckbox [type="checkbox"]:not(:checked) + label, .boxedCheckbox [type="checkbox"]:checked + label {
+			width: 40px;
+			height: 40px;
+			border: 5px solid #12C5C3;
+		}
+		.product_list.gridView .checkedImage {
+			width: 60px;
+			height: 55px;
+		}
+		.product_list.listView .single_product{
+			padding: 25px;
+		}
+	}
+
 	/* only for Desktop */
 	@media only screen and (min-width: 1025px){
 		
