category product fetching from json files, TextLimit directive added and few changes in styles.

--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -460,6 +460,7 @@
 	.product_list.gridView{
 		display: flex;
 		flex-wrap: wrap;
+		justify-content: space-between;
 	}
 	.product_list.gridView .checkedImage .editButton, .product_list.gridView .productText{
 		display: none;
