--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -294,3 +294,9 @@
 
   </div>
 </div>
+
+<!-- <star-rating [starType]="'svg'" [rating]="3.5" [showHalfStars]="true" [readOnly]="true"></star-rating> -->
+
+<!-- <p
+  [TextLimit]="36"
+>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum corrupti enim repellat exercitationem ducimus? Possimus quos voluptatibus veritatis quo, illum tenetur, soluta maxime odit, aliquam dignissimos libero iure ex tempore quas fuga inventore! Mollitia odit laudantium, magni totam ipsa consectetur!</p> -->
