--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -121,7 +121,7 @@
 
           <div class="gridViewText">
             <div class="normalView">
-              <p class="pNname">{{product.name}}</p>
+              <p class="pNname" [TextLimit]="28">{{product.name}}</p>
               <p>
                 <span class="pNoldPrice">{{product.oldPrice}}$</span>
                 <span class="pNnewPrice">{{product.price}}$</span>
@@ -134,12 +134,22 @@
                 <span class="pEnewPrice">{{product.price}} $</span>
               </p>
               <div class="pErating">
+                <!-- <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <span>{{product.rating}}</span>
+                <span>{{product.rating}}</span> -->
+                <star-rating 
+                  [starType]="'svg'" 
+                  [rating]="(product.rating/20).toFixed(2)" 
+                  [showHalfStars]="true" 
+                  [readOnly]="true" 
+                  staticColor="ok"
+                  labelText="{{product.rating}}"
+                  labelPosition="right"
+                  >
+                </star-rating>
               </div>
               <div class="pEaddToCart">
                 <label for="cartfilled-id-{{product.id}}">
