--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.min.css";
+@import "~css-star-rating/css/star-rating.min.css";
 
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
+
 
 
 *{
