scroll to top and footer menu inital finish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <p-nav></p-nav>
 <router-outlet></router-outlet>
+<scroll-to-top></scroll-to-top>
 <p-footer></p-footer>
 <!-- <home-page></home-page> -->
 <!-- <app-temp></app-temp> -->
