--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -9,6 +9,7 @@
     background: url("../../assets/images/bg.jpg") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
+    padding-bottom: 40px;
 }
 
 .homePage:after {
