--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,16 @@ a:hover{
     color: inherit;
 }
 
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+  }
+
 @media (min-width: 2049px){
     body{
         font-size: 30px;
