--- a/src/app/p-footer/p-footer.component.html
+++ b/src/app/p-footer/p-footer.component.html
@@ -9,7 +9,7 @@
 
       <div id="footerNav" class="footernav">
         <div #footerMenu *ngFor="let menu of menuItems" class="footerNavItem">
-          <a class="noselect" href="">{{ menu.item }}</a>
+          <a class="noselect" href="{{menu.link}}">{{ menu.item }}</a>
         </div>
       </div>
 
